@@ -75,13 +75,13 @@ void countReplaced(const unsigned long *data, int len,
 }
 
 /* returns active bank, or -1 if none */
-int Mark5BankGet(SSHANDLE xlrDevice)
+int Mark5BankGet(SSHANDLE *xlrDevice)
 {
 	S_BANKSTATUS bank_stat;
 	XLR_RETURN_CODE xlrRC;
 	int b = -1;
 
-	xlrRC = XLRGetBankStatus(xlrDevice, BANK_A, &bank_stat);
+	xlrRC = XLRGetBankStatus(*xlrDevice, BANK_A, &bank_stat);
 	if(xlrRC == XLR_SUCCESS)
 	{
 		if(bank_stat.Selected)
@@ -91,7 +91,7 @@ int Mark5BankGet(SSHANDLE xlrDevice)
 	}
 	if(b == -1)
 	{
-		xlrRC = XLRGetBankStatus(xlrDevice, BANK_B, &bank_stat);
+		xlrRC = XLRGetBankStatus(*xlrDevice, BANK_B, &bank_stat);
 		if(xlrRC == XLR_SUCCESS)
 		{
 			if(bank_stat.Selected)
@@ -105,19 +105,19 @@ int Mark5BankGet(SSHANDLE xlrDevice)
 }
 
 /* returns 0 or 1 for bank A or B, or < 0 if module not found */
-int Mark5BankSetByVSN(SSHANDLE xlrDevice, const char *vsn)
+int Mark5BankSetByVSN(SSHANDLE *xlrDevice, const char *vsn)
 {
 	S_BANKSTATUS bank_stat;
 	XLR_RETURN_CODE xlrRC;
 	int b = -1;
 
-	xlrRC = XLRGetBankStatus(xlrDevice, BANK_A, &bank_stat);
+	xlrRC = XLRGetBankStatus(*xlrDevice, BANK_A, &bank_stat);
 	if(xlrRC == XLR_SUCCESS)
 	{
 		if(strncasecmp(bank_stat.Label, vsn, 8) == 0)
 		{
 			b = 0;
-			xlrRC = XLRSelectBank(xlrDevice, BANK_A);
+			xlrRC = XLRSelectBank(*xlrDevice, BANK_A);
 			if(xlrRC != XLR_SUCCESS)
 			{
 				b = -2;
@@ -126,13 +126,13 @@ int Mark5BankSetByVSN(SSHANDLE xlrDevice, const char *vsn)
 	}
 	if(b == -1)
 	{
-		xlrRC = XLRGetBankStatus(xlrDevice, BANK_B, &bank_stat);
+		xlrRC = XLRGetBankStatus(*xlrDevice, BANK_B, &bank_stat);
 		if(xlrRC == XLR_SUCCESS)
 		{
 			if(strncasecmp(bank_stat.Label, vsn, 8) == 0)
 			{
 				b = 1;
-				xlrRC = XLRSelectBank(xlrDevice, BANK_B);
+				xlrRC = XLRSelectBank(*xlrDevice, BANK_B);
 				if(xlrRC != XLR_SUCCESS)
 				{
 					b = -3;
@@ -141,10 +141,19 @@ int Mark5BankSetByVSN(SSHANDLE xlrDevice, const char *vsn)
 		}
 	}
 
+	/* Close and Open the XLR device after a bank change -- a workaround to 
+	 * a streamstor bug */
+	XLRClose(*xlrDevice);
+	xlrRC = XLROpen(1, xlrDevice);
+	if(xlrRC != XLR_SUCCESS)
+	{
+		b = -4;
+	}
+
 	return b;
 }
 
-static int getMark5Module(struct Mark5Module *module, SSHANDLE xlrDevice, int mjdref, 
+static int getMark5Module(struct Mark5Module *module, SSHANDLE *xlrDevice, int mjdref, 
 	int (*callback)(int, int, int, void *), void *data, float *replacedFrac)
 {
 	XLR_RETURN_CODE xlrRC;
@@ -171,20 +180,20 @@ static int getMark5Module(struct Mark5Module *module, SSHANDLE xlrDevice, int mj
 		return -1;
 	}
 
-	xlrRC = XLRGetLabel(xlrDevice, label);
+	xlrRC = XLRGetLabel(*xlrDevice, label);
 	if(xlrRC != XLR_SUCCESS)
 	{
 		return -1;
 	}
 	label[8] = 0;
 
-	len = XLRGetUserDirLength(xlrDevice);
+	len = XLRGetUserDirLength(*xlrDevice);
 	if(len < (signed int)sizeof(struct Mark5Directory))
 	{
 		return -1;
 	}
 
-	xlrRC = XLRGetUserDir(xlrDevice, sizeof(struct Mark5Directory), 
+	xlrRC = XLRGetUserDir(*xlrDevice, sizeof(struct Mark5Directory), 
 		0, &m5dir);
 	if(xlrRC != XLR_SUCCESS)
 	{
@@ -250,7 +259,7 @@ static int getMark5Module(struct Mark5Module *module, SSHANDLE xlrDevice, int mj
 		a = scan->start>>32;
 		b = scan->start % (1LL<<32);
 
-		xlrRC = XLRReadData(xlrDevice, buffer, a, b, bufferlen);
+		xlrRC = XLRReadData(*xlrDevice, buffer, a, b, bufferlen);
 
 		if(xlrRC == XLR_FAIL)
 		{
@@ -517,7 +526,7 @@ int saveMark5Module(struct Mark5Module *module, const char *filename)
 /* retrieves directory (either from cache or module) and makes sure
  * desired module is the active one.  On any failure return < 0 
  */
-int getCachedMark5Module(struct Mark5Module *module, SSHANDLE xlrDevice, 
+int getCachedMark5Module(struct Mark5Module *module, SSHANDLE *xlrDevice, 
 	int mjdref, const char *vsn, const char *dir,
 	int (*callback)(int, int, int, void *), void *data,
 	float *replacedFrac)
